k8s/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-redis
  namespace: clinic-scheduler
  labels:
    app: clinic-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinic-redis
  template:
    metadata:
      labels:
        app: clinic-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command:
            - redis-server
            - --maxmemory
            - 128mb
            - --maxmemory-policy
            - allkeys-lru
            - --appendonly
            - "yes"
            - --appendfilename
            - clinic_aof.aof
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: redis-data
              mountPath: /data
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: redis-data
          emptyDir: {}
