k8s/service-worker-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: clinic-worker-green
  namespace: clinic-scheduler
  labels:
    app: clinic-worker
spec:
  type: ClusterIP
  selector:
    app: clinic-worker
    version: green
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
